--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,32 @@ gen
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+### Go template
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
+
+build
+.DS_Store
+bin
