--- a/.chglog/config.yml
+++ b/.chglog/config.yml
@@ -23,7 +23,7 @@ options:
       debt: Tech Debt
       techdebt: Tech Debt
   header:
-    pattern: "^(\\w*)(?:\\(([\\w\\$\\.\\-\\*\\s]*)\\))?\\:\\s(.+)$"
+    pattern: "^(\\w*)(?:\\(([\\w\\$\\.\\-\\*\\s]*)\\))?\\:\\s(.*)$"
     pattern_maps:
       - Type
       - Scope
