ci(docker): add docker push to ghcr.io
Signed-off-by: Derek Smith <dsmith@goodwaygroup.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -38,6 +38,11 @@ changelog:
 snapshot:
   name_template: "{{ .Tag }}-next"
 
+dockers:
+  - image_templates:
+      - "ghcr.io/goodwaygroup/gw-aws-audit:{{ .RawVersion }}"
+      - "ghcr.io/goodwaygroup/gw-aws-audit:latest"
+
 brews:
   - tap:
       owner: GoodwayGroup
